--- a/project/src/main/res/values-it/strings.xml
+++ b/project/src/main/res/values-it/strings.xml
@@ -957,8 +957,8 @@
     <!-- Itineraries -->
     <!-- Itinerary -->
     <string name="itinerary">Itinerario</string>
-    <!-- Shop Travel - used on launch screen tab, so can't be too long -->
-    <string name="shop_travel">Acquista viaggi</string>
+    <!-- Shop -->
+    <string name="shop">Acquista</string>
     <!-- Find Itinerary -->
     <string name="find_itinerary">Trova itinerario</string>
     <!-- Enter Itinerary Details -->
