--- a/project/src/main/res/values-es-rES/strings.xml
+++ b/project/src/main/res/values-es-rES/strings.xml
@@ -957,8 +957,8 @@
     <!-- Itineraries -->
     <!-- Itinerary -->
     <string name="itinerary">Itinerario</string>
-    <!-- Shop Travel - used on launch screen tab, so can't be too long -->
-    <string name="shop_travel">Comprar viaje</string>
+    <!-- Shop -->
+    <string name="shop">Comprar</string>
     <!-- Find Itinerary -->
     <string name="find_itinerary">Encontrar itinerario</string>
     <!-- Enter Itinerary Details -->
