--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -41,6 +41,8 @@
     <string name="cars_invalid_input_text">Invalid Info</string>
     <!-- Text for generic error toolbar-->
     <string name="cars_error_text">Error</string>
+    <!-- Text for toolbar on no search results -->
+    <string name="cars_no_results_text">No Results</string>
     <!-- Text for reserving car-->
     <string name="cars_reserve_text">Reserve</string>
     <!-- Text for viewing details-->
@@ -102,6 +104,25 @@
     <string name="drop_off_same_as_pick_up">Coming soon! We\'re working hard to add one way bookings in an upcoming version.</string>
     <!-- Car search error -->
     <string name="error_car_search_message">Your search returned no results. Please retry your search with different criteria.</string>
+    <!-- Car no filtered search results -->
+    <string name="filter_no_car_search_results_message">Your search returned no results. Please try reducing the amount of filters.</string>
+    <!-- Transmission options filter label for a car rental -->
+    <string name="options">Options</string>
+    <!-- Automatic transmission filter button-->
+    <string name="car_filter_automatic">Automatic</string>
+    <!-- Manual transmission filter button-->
+    <string name="car_filter_manual">Manual</string>
+    <!-- Any transmission type filter button -->
+    <string name="car_filter_all">All</string>
+    <!-- Air conditioning option checkbox filter -->
+    <string name="car_filter_checkbox_air_conditioning">Air Conditioning</string>
+    <!-- Unlimited mileage option checkbox filter -->
+    <string name="car_filter_checkbox_unlimited_mileage">Unlimited Mileage</string>
+    <!-- Car types checkbox filter label for a car rental-->
+    <string name="car_types">Car Types</string>
+    <!-- Car types checkbox filter label for a car rental-->
+    <string name="car_vendors">Rental Companies</string>
+
     <!-- Checkout -->
     <!-- Car model templates-->
     <string name="car_model_name_template">%1$s or similar</string>
@@ -536,7 +557,7 @@
     <!-- Enter contact details-->
     <string name="lx_enter_contact_details">Enter contact details</string>
     <!-- LX search error -->
-    <string name="error_lx_search_message">Your search returned no results. Please retry your search with different criteria.</string> 
+    <string name="error_lx_search_message">Your search returned no results. Please retry your search with different criteria.</string>
     <!-- LX search error -->
     <string name="error_lx_current_location_search_message">We couldn’t determine your current location to find activities around you.</string> 
     <!-- Text for generic error toolbar-->
@@ -2095,7 +2116,6 @@
     <string name="air_attach_with_discounts">with discounts</string>
 
 
-
     <!-- Hotel confirmation page -->
     <!-- Title for section helping users get flights after booking a hotel -->
     <string name="get_there">Get There</string>
@@ -2145,6 +2165,8 @@
     <string name="accept">Accept</string>
     <!-- Button label for retrying after getting an error -->
     <string name="retry">Retry</string>
+    <!-- Button label for adjusting filters after getting no results -->
+    <string name="edit_filters">Edit Filters</string>
     <!-- Button label for calling -->
     <string name="call_support">Support</string>
     <!-- Error shown to user if the flight's price has increased since they last checked.  %1$s is the difference in price, %2$s is the new total, both are cash (e.g. "$5.99"). -->
