--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -1885,7 +1885,7 @@
     <!-- Born on colored -->
     <string name="born_on_colored_TEMPLATE">Born %1$s</string>
     <!-- <brand> expiring <date> template -->
-    <string name="brand_expiring_TEMPLATE">&lt;font color="#38597D"&gt;%1$s&lt;/font&gt; expiring %2$s</string>
+    <string name="brand_expiring_TEMPLATE">%1$s expiring %2$s</string>
 
     <!-- Section edit contact -->
     <!-- name on card hint -->
@@ -2014,7 +2014,7 @@
     <!-- Passport -->
     <string name="passport">Passport</string>
     <!-- Current traveler - <firstname> <lastname> -->
-    <string name="current_traveler_TEMPLATE">&lt;font color="#38597D"&gt;Current traveler -&lt;/font&gt; %1$s %2$s</string>
+    <string name="current_traveler_TEMPLATE">Current traveler - %1$s %2$s</string>
 
     <!-- Seat types -->
     <!-- Window seating preference -->
