--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -2351,6 +2351,8 @@
     <string name="tonight_only">Tonight Only!</string>
     <!-- Expedia sponsored listing -->
     <string name="sponsored">Sponsored</string>
+    <!-- Expedia ETP book now/pay later search results -->
+    <string name="book_now_pay_later">Book Now, Pay Later</string>
     <!-- Search range error message template. %1$s = max search length. e.g. "We're sorry, but we are unable to search for hotel stays longer than 28 days." -->
     <string name="hotel_search_range_error_TEMPLATE">We\&apos;re sorry, but we are unable to search for hotel stays longer than %1$s days.</string>
     <!-- Search Error title text "Search Error" -->
